examples/test/testpolicy12207.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12207
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key22: value21
      key38: value17
      key12: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value44
          key39: value18
          key34: value25
